--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <script src="https://code.jquery.com/jquery-2.2.1.min.js" type="text/javascript"></script>
   <script async defer
-    src="https://testportalone.processonepayments.com/Api/Api/Cdn/GenericModalV2/assets/js/PortalOne.js"
+    src="https://stgportalone.processonepayments.com/Api/Api/Cdn/GenericModalV2/assets/js/PortalOne.js"
     type="text/javascript"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
